# CodeRL

./: .gitignore  README.md  advanced_lora_trainer.py  pyproject.toml  requirements.txt
config/: config.yaml
docs/: ARCHITECTURE.md  MEMORY_ARCHITECTURE.md  MEMORY_STORAGE.md
src/mem_aug/components/datagen/: build_fim_dataset.py  data_gen_step_1.py  generate_ast_diffs.py  generate_commit_ast.py  generate_tasks.py
src/mem_aug/components/memory/: __init__.py  external_memory.py  hybrid_model.py  internal_memory.py
src/mem_aug/utils/: build_commit_diff.py  check_ast_coverage.py  extract_rust_ast.py  repo_manager.py
tests/: quick_train_test.py  run_complete_training_demo.py  test_advanced_lora_trainer.py  test_gated_retrieval.py  test_gating.py  test_hybrid_architecture.py  test_inference.py  test_inference_demo.py  test_optimized_gating.py  test_peft_integration.py  test_retrieval_layers.py  test_save_load_model.py
